examples/test/testpolicy236.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy236
  namespace: namespace197
spec:
  podSelector:
    matchLabels:
      key29: value35
      key14: value37
      key21: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value4
          key49: value49
          key19: value38
      podSelector:
        matchLabels:
          key48: value42
          key25: value4
